basic html structure done

--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
 </head>
 <body>
     
+    <div class="wrapper">
+        <h1 class="header">Todo App</h1>
+        <input type="text" placeholder="Enter your item here" class="inputValue">
+
+        <ul>
+            <li class="item">Item</li>
+            <li class="item">Item</li>
+            <li class="item">Item</li>
+        </ul>
+    </div>
+
 </body>
 </html>
