basic js code done, app is functional

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <h1 class="header">Todo App</h1>
         <input type="text" placeholder="Enter your item here" class="inputValue">
 
-        
+        <ul class="list">
+            
+        </ul>
     </div>
 
 </body>
